# Storyboard-Copilot

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyrightconfig.json
.agents/skills/api-docs-audit/: SKILL.md
.agents/skills/git-commit-message-guide/: SKILL.md
.agents/skills/storyboard-openspec-sync/: SKILL.md
.agents/skills/storyboard-provider-model-extension/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: build.yml
docs/api_docs/: README.md
docs/api_docs/models/: deepseek-v4-pro.md  gemini-3.md  gpt-5.5.md  gpt-image-2.0.md  kimi-2.6.md  kling-3.0.md  kling-image-3.0.md  nano-banana-2.md  nano-banana-pro.md  qwen-image-2512.md  seedance-2.0.md  seedream-5.0.md
docs/development-guides/: base-tools-installation.md  project-development-setup.md  provider-and-model-extension.md
openspec/: AGENTS.md  architecture.md  custom-ai-model-config.md  project.md  roadmap.md
openspec/asset-system/: README.md  canvas-binding.md  data-model.md  explorer-ui.md  frontend-modules.md  http-api.md  lifecycle.md  terminology.md
openspec/changes/: README.md  agent-chat-panel.md  editable-asset-explorer.md  local-zimage.md  project-git-version-control.md
openspec/plugins/: README.md
scripts/: export-component-doc.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: dto.rs  mod.rs  secrets.rs  service.rs
src-tauri/src/ai/adapters/: mod.rs  registry.rs
src-tauri/src/ai/adapters/builtin/: deepseek.rs  kling.rs  mod.rs
src-tauri/src/ai/providers/kie/: mod.rs
src-tauri/src/clipboard/: assets.rs  dto.rs  fallback.rs  macos.rs  mod.rs
src-tauri/src/commands/: image.rs  project_state.rs  update.rs
src-tauri/src/http/: mod.rs
src-tauri/src/local_zimage/: app.py  gradio_client.rs  install.rs  jobs.rs  mod.rs
src-tauri/src/media/: dto.rs  mod.rs  preview_cache.rs  serve.rs  store.rs  upload.rs
src-tauri/src/project/: chat_history_cache.rs  commit_history_cache.rs  dto.rs  file_store.rs  git.rs  git_dto.rs  mod.rs  service.rs  storage.rs  store.rs
src/commands/: image.ts  projectState.ts
src/components/: GlobalErrorDialog.tsx  SettingsDialog.tsx  TitleBar.tsx  UpdateAvailableDialog.tsx
src/components/settings/: BuiltinModelsPanel.tsx  LocalZImagePanel.tsx
src/components/ui/: index.ts  layout.ts  motion.ts  portalToBody.tsx  primitives.tsx
src/features/aiModels/: types.ts
src/features/canvas/: Canvas.tsx  CanvasToolbar.tsx  NodeSelectionMenu.tsx
src/features/git/: gitFormatters.ts  types.ts  useGitPluginStatus.ts  (+1 more)
src/infrastructure/: rustApiClient.ts
src/stores/: canvasStore.ts  projectStore.ts  settingsStore.ts
(+202 files in other folders)
