[package]
name = "storyboard-copilot"
version = "0.1.13"
description = "Video-Copilot - AI图像生成与分镜工具"
authors = ["you"]
edition = "2021"

[lib]
name = "storyboard_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
directories = "6"
async-trait = "0.1"
automod = "1.0"
inventory = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
md5 = "0.7"
arboard = "3.4"
fast_image_resize = "6.0.0"
imageproc = "0.26.1"
ab_glyph = "0.2.32"
png = "0.17"
urlencoding = "2"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 2
