[package]
name = "video-copilot"
version = "0.1.13"
description = "Video-Copilot - AI图像生成与分镜工具"
authors = ["you"]
edition = "2021"
default-run = "video-copilot"

[lib]
name = "video_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "video-api"
path = "src/bin/video_api.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
directories = "6"
async-trait = "0.1"
automod = "1.0"
inventory = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
md5 = "0.7"
arboard = "3.4"
fast_image_resize = "6.0.0"
imageproc = "0.26.1"
ab_glyph = "0.2.32"
png = "0.17"
urlencoding = "2"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 2
